--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "vitepress": "^1.6.3"
   },
   "scripts": {
-    "dev": "vitepress dev docs",
-    "build": "vitepress build docs",
-    "serve": "vitepress serve docs",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs",
     "register:components": "vitepress-rc"
   },
   "private": true,
