--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
 
     # 添加环境变量
     env:
-      NODE_ENV: production # 设置 Node.js 环境为生产模式
+      NODE_ENV: development # 设置 Node.js 环境为生产模式 production
       ESBUILD_BINARY_PATH: "node_modules/esbuild/bin/esbuild" # 指定 esbuild 二进制路径
 
     # 添加权限配置（新增部分）
