--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.4.0",
     "element-plus": "^2.10.3",
+    "markdown-it-container": "4.0.0",
     "vitepress-script-preview": "^0.0.10",
     "vitepress-theme-demoblock": "^3.1.3"
-    
   }
 }
