--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@vitepress-demo-preview/plugin": "^1.4.0",
     "element-plus": "^2.10.3",
     "markdown-it-container": "4.0.0",
+    "sass": "^1.89.2",
     "vitepress-script-preview": "^0.0.10",
-    "vitepress-theme-demoblock": "^3.1.3"
+    "vitepress-theme-demoblock": "^3.1.3",
+    "vue-sonner": "^2.0.1"
   }
 }
