--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "@types/markdown-it": "^14.1.2",
+    "@types/unist": "^3.0.3",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "hash-sum": "^2.0.0",
+    "markdown-it": "^14.1.0",
+    "remark-directive": "^4.0.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "sass": "^1.89.2",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
+    "vite": "^5.4.19",
+    "vitepress": "^1.6.3",
+    "vue": "^3.5.17"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
@@ -11,13 +25,11 @@
   "private": true,
   "packageManager": "pnpm@9.12.2",
   "dependencies": {
-    "@vitepress-demo-preview/component": "^2.3.2",
-    "@vitepress-demo-preview/plugin": "^1.4.0",
+    "@floating-ui/vue": "^1.1.7",
+    "@vueuse/core": "^13.5.0",
+    "@wsfe/vue-tree": "^4.1.1",
     "element-plus": "^2.10.3",
     "markdown-it-container": "4.0.0",
-    "sass": "^1.89.2",
-    "vitepress-script-preview": "^0.0.10",
-    "vitepress-theme-demoblock": "^3.1.3",
     "vue-sonner": "^2.0.1"
   }
 }
