--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
+    "@types/node": "^24.0.14",
     "@types/unist": "^3.0.3",
     "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/compiler-sfc": "^3.5.17",
     "hash-sum": "^2.0.0",
+    "less": "^4.4.0",
     "markdown-it": "^14.1.0",
     "remark-directive": "^4.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
     "sass": "^1.89.2",
+    "typescript": "^5.8.3",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "vite": "^5.4.19",
@@ -20,15 +24,18 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
-    "register:components": "vitepress-rc"
+    "preview:docs": "vitepress preview docs"
   },
   "private": true,
   "packageManager": "pnpm@9.12.2",
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@floating-ui/vue": "^1.1.7",
     "@vueuse/core": "^13.5.0",
     "@wsfe/vue-tree": "^4.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "element-plus": "^2.10.3",
+    "lodash-unified": "^1.0.3",
     "markdown-it-container": "4.0.0",
     "vue-sonner": "^2.0.1"
   }
