--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,14 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    "jsx": "preserve", // 保留 JSX 结构，由 Vue 转换
+    "jsxFactory": "h", // Vue 3 的 JSX 工厂函数
+    "jsxFragmentFactory": "Fragment", // Vue 3 的 Fragment 支持
+    /* 添加resolveExtensions配置 */
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
