--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,20 +2,20 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2023",
-    "lib": ["ES2023"],
+    "lib": [
+      "ES2023"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
     "jsx": "preserve", // 保留 JSX 结构，由 Vue 转换
     "jsxFactory": "h", // Vue 3 的 JSX 工厂函数
-    "jsxFragmentFactory": "Fragment" ,// Vue 3 的 Fragment 支持
-
+    "jsxFragmentFactory": "Fragment", // Vue 3 的 Fragment 支持
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -24,5 +24,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts"
+  ]
 }
