--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
 
     # 添加环境变量
     env:
-      NODE_ENV: development # 设置 Node.js 环境为生产模式 production
-      ESBUILD_BINARY_PATH: "node_modules/esbuild/bin/esbuild" # 指定 esbuild 二进制路径
+      NODE_ENV: production # 修正为生产环境
+      ESBUILD_BINARY_PATH: "node_modules/esbuild/bin/esbuild"
 
     # 添加权限配置（新增部分）
     permissions:
@@ -51,14 +51,22 @@ jobs:
           pnpm install --no-frozen-lockfile
 
       # 打包vitepress项目
+      - name: 检查构建产物
+        run: |
+          echo "查看构建目录内容:"
+          ls -la docs/.vitepress/dist
+          echo "检查文件大小:"
+          du -sh docs/.vitepress/dist
       - name: 打包vitepress项目
         run: pnpm run docs:build
 
       # 将打包后dist里的产物提交到prod分支
       - name: 部署到 GitHub 🚀
-        uses: JamesIves/github-pages-deploy-action@v4.4.1
+        uses: JamesIves/github-pages-deploy-action@v4.6.0 # 更新到最新版本
         with:
           branch: prod
           folder: docs/.vitepress/dist
           single-commit: true
           clean: true
+          # 添加调试日志
+          log-level: debug
