--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,15 +51,22 @@ jobs:
           pnpm install --no-frozen-lockfile
 
       # 打包vitepress项目
-      - name: 检查构建产物
-        run: |
-          echo "查看构建目录内容:"
-          ls -la docs/.vitepress/dist
-          echo "检查文件大小:"
-          du -sh docs/.vitepress/dist
       - name: 打包vitepress项目
-        run: pnpm run docs:build
+        run: |
+          pnpm run docs:build
+          # 检查构建是否成功生成了dist目录
+          if [ ! -d "docs/.vitepress/dist" ]; then
+            echo "错误: 构建失败，未生成dist目录"
+            exit 1
+          fi
 
+      # 检查构建产物
+      - name: 检查构建目录内容
+        run: |
+          echo "查看构建目录内容:" 
+          ls -la docs/.vitepress/dist
+          echo "检查文件大小:" 
+          du -sh docs/.vitepress/dist
       # 将打包后dist里的产物提交到prod分支
       - name: 部署到 GitHub 🚀
         uses: JamesIves/github-pages-deploy-action@v4.6.0 # 更新到最新版本
