--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx",
     "lint:fix": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
     "format": "prettier --write ./**/*.{vue,js,ts,jsx,tsx,css,scss,md}",
-    "lint-staged": "lint-staged"  
+    "lint-staged": "lint-staged"
   },
   "lint-staged": {
     "*.{vue,js,ts,jsx,tsx}": [
@@ -47,12 +47,14 @@
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.0.14",
     "@types/unist": "^3.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
+    "@vitest/eslint-plugin": "^1.3.4",
     "@vue/babel-plugin-jsx": "^1.4.0",
     "@vue/compiler-sfc": "^3.5.17",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.31.0",
