--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format": "prettier --write ./**/*.{vue,js,ts,jsx,tsx,css,scss,md}",
     "lint-staged": "lint-staged",
     "python:run": "python src/python/onr.py",
-    "node:run": "node ./src/python/index.js"
+    "node:run": "node ./src/python/index.js",
+    "test:fun":"node './index.js"
   },
   "lint-staged": {
     "*.{vue,js,ts,jsx,tsx}": [
