--- a/package.json
+++ b/package.json
@@ -5,20 +5,16 @@
   "type": "module",
   "packageManager": "pnpm@9.12.2",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "prepare": "husky install",
-    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx",
-    "lint:fix": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
+    "lint": "eslint . --fix",
     "format": "prettier --write ./**/*.{vue,js,ts,jsx,tsx,css,scss,md}",
     "lint-staged": "lint-staged",
     "python:run": "python src/python/onr.py",
     "node:run": "node ./src/python/index.js",
-    "test:fun":"node ./index.js"
+    "test:fun": "node ./index.js"
   },
   "lint-staged": {
     "*.{vue,js,ts,jsx,tsx}": [
@@ -39,7 +35,7 @@
     "lodash-unified": "^1.0.3",
     "markdown-it-container": "4.0.0",
     "process": "^0.11.10",
-    "sass-migrator": "^2.3.3",
+    "sass-migrator": "^2.5.6",
     "vue": "^3.5.17",
     "vue-draggable-plus": "^0.6.0",
     "vue-sonner": "^2.0.2",
@@ -80,6 +76,7 @@
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "vite": "^7.0.4",
+    "vite-plugin-dts": "^4.5.4",
     "vitepress": "^1.6.3",
     "vue": "^3.5.17",
     "vue-tsc": "^2.2.12"
