--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "vite-project",
+  "name": "swy-ui",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "packageManager": "pnpm@9.12.2",
+  "description": "A Vue.js UI component library",
+  "files": [
+    "dist"
+  ],
+  "peerDependencies": {
+    "vue": "^3.0.0"
+  },
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
