--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@floating-ui/vue": "^1.1.7",
     "@popperjs/core": "^2.11.8",
     "@vue/shared": "^3.5.26",
+    "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^13.5.0",
     "@wsfe/vue-tree": "^4.1.1",
     "async-validator": "^4.2.5",
@@ -46,8 +47,10 @@
     "element-plus": "^2.10.4",
     "lodash-unified": "^1.0.3",
     "markdown-it-container": "4.0.0",
+    "normalize-wheel-es": "^1.2.0",
     "process": "^0.11.10",
     "sass-migrator": "^2.5.6",
+    "vitest": "^4.0.16",
     "vue": "^3.5.17",
     "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.6.4",
